--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,5 +1,26 @@
 ---
 layout: default
 ---
-
-<h1>Test</h1>
+<section>
+    <p>This is me</p>
+</section>
+<section>
+    <h1>Projects</h1>
+    <ul class="project-list">
+        <li><a class="project-list__link" href="">Rpi thing 1</a></li>
+        <li><a class="project-list__link" href="">Rpi thing 1</a></li>
+        <li><a class="project-list__link" href="">Rpi thing 1</a></li>
+        <li><a class="project-list__link" href="">Rpi thing 1</a></li>
+    </ul>
+</section>
+<section>
+    <h1>Posts</h1>
+    <ul class="post-list">
+        {%- for post in site.posts -%}
+        <li>
+            <a class="post-list__link" href="{{ post.url }}">{{ post.title | escape }}</a>
+            <small class="post-list__timestamp">{{ post.date | date_to_long_string }}</small>
+        </li>
+        {%- endfor -%}
+    </ul>
+</section>
