--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,10 +1,35 @@
 <!DOCTYPE html>
 <html lang="{{ page.lang | default: site.lang | default: "en" }}">
-  {%- include head.html -%}
-  <body id="layout" class="pure-g">
-    {%- include sidebar.html -%}
-    <div class="content pure-u-1 pure-u-md-3-4">
-        {{ content }}
-        {%- include footer.html -%}  
-  </body>
+{%- include head.html -%}
+
+<body>
+    <header>
+        <div class="container">
+            <a href="{{ '/' | relative_url }}">
+                {% if layout.showArrow %}
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 31.494 31.494" width="50" height="20" class="back-arrow">
+                    <path style="fill:#28334A" d="M10.273,5.009c0.444-0.444,1.143-0.444,1.587,0c0.429,0.429,0.429,1.143,0,1.571l-8.047,8.047h26.554
+                        c0.619,0,1.127,0.492,1.127,1.111c0,0.619-0.508,1.127-1.127,1.127H3.813l8.047,8.032c0.429,0.444,0.429,1.159,0,1.587
+                        c-0.444,0.444-1.143,0.444-1.587,0l-9.952-9.952c-0.429-0.429-0.429-1.143,0-1.571L10.273,5.009z"/>
+                </svg>
+                {% endif %}
+                <svg xmlns="http://www.w3.org/2000/svg" width="70" height="80" viewBox="0 0 70 80">
+                    <g style="fill:#28334A"
+                        transform="matrix(8.0683694,0,0,8.0683694,-356.09752,-227.58725)"
+                        aria-label="jx0">
+                        <path d="m 45.606976,30.539693 h -0.550332 v 5.863148 c 0,0.253999 -0.211666,0.465665 -0.465665,0.465665 h -0.201082 v 0.550332 h 0.201082 c 0.560915,0 1.015997,-0.455082 1.015997,-1.015997 z m -0.550332,-0.592665 h 0.550332 v -0.740831 h -0.550332 z" />
+                        <path d="m 47.423831,33.714683 h 0.02117 l 0.634998,1.98966 h 0.550332 l -0.920747,-2.582325 0.920747,-2.582325 h -0.550332 l -0.634998,1.98966 h -0.02117 l -0.634998,-1.98966 h -0.550332 l 0.920747,2.582325 -0.920747,2.582325 h 0.550332 z" />
+                        <path d="m 49.845422,29.798862 c 0,-0.433915 0.359832,-0.793748 0.793748,-0.793748 0.433915,0 0.793747,0.359833 0.793747,0.793748 v 4.667235 c 0,0.433915 -0.359832,0.793748 -0.793747,0.793748 -0.433916,0 -0.793748,-0.359833 -0.793748,-0.793748 z m -0.550331,4.667235 c 0,0.740831 0.603248,1.344079 1.344079,1.344079 0.740831,0 1.344079,-0.603248 1.344079,-1.344079 v -4.667235 c 0,-0.740831 -0.603248,-1.344079 -1.344079,-1.344079 -0.740831,0 -1.344079,0.603248 -1.344079,1.344079 z" />
+                    </g>
+                </svg>
+            </a>
+        </div>
+    </header>
+    <main class="content" role="main">
+        <div class="container">
+            {{ content }}
+        </div>
+    </main>
+</body>
+
 </html>
