--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -1,178 +1,104 @@
-* {
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
+html, body {
+    color: $foreground-color;
+    background: $background-color;
+    font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Ubuntu,"Helvetica Neue",sans-serif;
+    font-size: 18px;
+    line-height: 1.388888;
 }
 
-a {
+body {
+    margin: 0;
+}
+
+::selection {
+    background-color:$tertiary-color;
+    color:$background-color;
+    text-shadow:none;
+}
+
+a, a:visited {
+    color: $tertiary-color;
     text-decoration: none;
-    color: rgb(61, 146, 201);
-}
-a:hover,
-a:focus {
-    text-decoration: underline;
 }
 
-h3 {
-    font-weight: 100;
+a:hover, a:focus, a:active {
+    color: $background-color;
+    background: $tertiary-color;
 }
 
-/* LAYOUT CSS */
-.pure-img-responsive {
-    max-width: 100%;
-    height: auto;
+header {
+    margin-top: 1rem;
 }
 
-#layout {
-    padding: 0;
+.container {
+    display: block;
+    margin: 0 auto;
+    max-width: 600px;
+    position: relative;
 }
 
-.header {
-    text-align: center;
-    top: auto;
-    margin: 3em auto;
+.title {
+    font-size: 3em;
 }
 
-.sidebar {
-    background: rgb(61, 79, 93);
-    color: #fff;
+.back-arrow {
+    font-family: monospace;
+    position: absolute;
+    top: 50%;
+    transform: translate(-100%, -50%);
 }
 
-.brand-title,
-.brand-tagline {
-    margin: 0;
-}
-.brand-title {
-    text-transform: uppercase;
-}
-.brand-tagline {
-    font-weight: 300;
-    color: rgb(176, 202, 219);
-}
-
-.nav-list {
-    margin: 0;
-    padding: 0;
+.project-list {
     list-style: none;
-}
-.nav-item {
-    display: inline-block;
-    *display: inline;
-    zoom: 1;
-}
-.nav-item a {
-    background: transparent;
-    border: 2px solid rgb(176, 202, 219);
-    color: #fff;
-    margin-top: 1em;
-    letter-spacing: 0.05em;
-    text-transform: uppercase;
-    font-size: 85%;
-}
-.nav-item a:hover,
-.nav-item a:focus {
-    border: 2px solid rgb(61, 146, 201);
-    text-decoration: none;
-}
+    list-style-type: none;
+    padding: 0;
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
 
-.content-subhead {
-    text-transform: uppercase;
-    color: #aaa;
-    border-bottom: 1px solid #eee;
-    padding: 0.4em 0;
-    font-size: 80%;
-    font-weight: 500;
-    letter-spacing: 0.1em;
-}
-
-.content {
-    padding: 2em 1em 0;
-}
-
-.post {
-    padding-bottom: 2em;
-}
-.post-title {
-    font-size: 2em;
-    color: #222;
-    margin-bottom: 0.2em;
-}
-.post-avatar {
-    border-radius: 50px;
-    float: right;
-    margin-left: 1em;
-}
-.post-description {
-    font-family: Georgia, "Cambria", serif;
-    color: #444;
-    line-height: 1.8em;
-}
-.post-meta {
-    color: #999;
-    font-size: 90%;
-    margin: 0;
-}
-
-.post-category {
-    margin: 0 0.1em;
-    padding: 0.3em 1em;
-    color: #fff;
-    background: #999;
-    font-size: 80%;
-}
-    .post-category-design {
-        background: #5aba59;
+    li {
+        list-style: none;
+        display: inline-block;
+        width: calc(100% / 3);
+        margin-bottom: 0.75rem;
     }
-    .post-category-pure {
-        background: #4d85d1;
-    }
-    .post-category-yui {
-        background: #8156a7;
-    }
-    .post-category-js {
-        background: #df2d4f;
+}
+
+.post-list {
+    list-style: none;
+    list-style-type: none;
+    padding: 0;
+    width: 100%;
+
+    li {
+        display: flex;
     }
 
-.post-images {
-    margin: 1em 0;
-}
-.post-image-meta {
-    margin-top: -3.5em;
-    margin-left: 1em;
-    color: #fff;
-    text-shadow: 0 1px 1px #333;
-}
-
-.footer {
-    padding: 1em 0;
-}
-.footer a {
-    color: #ccc;
-    font-size: 80%;
-}
-.footer .pure-menu a:hover,
-.footer .pure-menu a:focus {
-    background: none;
-}
-
-@media (min-width: 48em) {
-    .content {
-        padding: 2em 3em 0;
-        margin-left: 25%;
+    &__link {
     }
 
-    .header {
-        margin: 80% 2em 0;
-        text-align: right;
+    &__timestamp {
+        margin-left: auto;
+    }
+}
+
+.article-body {
+    p:first-child {
+        font-size: 1.25em;
+    }
+}
+
+@media only screen and (max-width: 600px) {
+    .project-list {
+        li {
+            width: 100%;
+        }
     }
 
-    .sidebar {
-        position: fixed;
-        top: 0;
-        bottom: 0;
-    }
-
-    .footer {
-        text-align: center;
+    .post-list {
+        &__timestamp {
+            display: none;
+        }
     }
 }
