--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -4,15 +4,14 @@ layout: default
 <section>
     <p>This is me</p>
 </section>
+<!--
 <section>
     <h1>Projects</h1>
     <ul class="project-list">
-        <li><a class="project-list__link" href="">Rpi thing 1</a></li>
-        <li><a class="project-list__link" href="">Rpi thing 1</a></li>
-        <li><a class="project-list__link" href="">Rpi thing 1</a></li>
-        <li><a class="project-list__link" href="">Rpi thing 1</a></li>
+        <li><a class="project-list__link" href="{{ 'projects/rp1.html' | relative_url }}">RPI Thing 1</a></li>
     </ul>
 </section>
+-->
 <section>
     <h1>Posts</h1>
     <ul class="post-list">
