First project post

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,17 +1,18 @@
 ---
 layout: default
+title: jx0.uk
 ---
 <section>
-    <p>This is me</p>
+    <p style="font-size: 1.25em"><strong>Hi!</strong> I am James and below are some words on Software Engineering as well as some programming-related projects.</p>
 </section>
-<!--
+
 <section>
     <h1>Projects</h1>
     <ul class="project-list">
-        <li><a class="project-list__link" href="{{ 'projects/rp1.html' | relative_url }}">RPI Thing 1</a></li>
+        <li><a class="project-list__link" href="{{ 'projects/bedside-light.html' | relative_url }}">Raspberry Pi bedside Lamp with Spotify</a></li>
     </ul>
 </section>
--->
+
 <section>
     <h1>Posts</h1>
     <ul class="post-list">
