--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,10 +25,8 @@
             </a>
         </div>
     </header>
-    <main class="content" role="main">
-        <div class="container">
-            {{ content }}
-        </div>
+    <main class="container" role="main">
+        {{ content }}
     </main>
 </body>
 
