--- a/_sass/code.scss
+++ b/_sass/code.scss
@@ -1,6 +1,6 @@
 figure.highlight { margin: 0; }
 
-.highlight pre { background-color: $foreground-color; padding: 0.25rem; }
+.highlight pre { background-color: $foreground-color; color: #f8f8f2; padding: 0.25rem; }
 .highlight .hll { background-color: $foreground-color; }
 //.highlight pre pre { background-color: $foreground-color; padding: 0.25rem; margin: 0; min-width: 100%; }
 .highlight .hll { background-color: $foreground-color; }
